--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,4 +27,6 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/todolist-application:${{ github.run_number }}
+        tags: |
+           ${{ secrets.DOCKER_USERNAME }}/todolist-application:latest
+           ${{ secrets.DOCKER_USERNAME }}/todolist-application:${{ github.run_number }}
